--- a/Riskvalve/Views/Login/Index.cshtml
+++ b/Riskvalve/Views/Login/Index.cshtml
@@ -2,9 +2,9 @@
     ViewData["Title"] = "Login";
     var message = TempData["Message"];
     var version = ViewData["AppVersion"];
-    var app_path = ViewData["AppPath"];
+    string baseurl = Url.Action("","");
+    string urllogin = Url.Action("Login", "Login");
 }
-
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
@@ -48,21 +48,20 @@
             </div>
         </div>
     </div>
-    <div class="login-image">
+    <div class="login-image" style="background-image: url('@baseurl/lib/images/u9.jpg')" >
 
     </div>
 </body>
 
 @section Scripts {
     <script>
-        var app_path = '@app_path';
         $(document).ready(function () {
             $('#btn-signin').click(function (e) {
                 e.preventDefault();
                 var username = $('input[name="username"]').val();
                 var password = $('input[name="password"]').val();
                 $.ajax({
-                    url: '/Login/Login',
+                    url: '@urllogin',
                     type: 'POST',
                     data: {
                         username: username,
@@ -70,7 +69,7 @@
                     },
                     success: function (data) {
                         if (data == true) {
-                            var path = app_path + '/Home/Index';
+                            var path = "@baseurl" + '/Home/Index';
                             location.href = path;
                         } else {
                             alert('Invalid username or password');
