--- a/Riskvalve/Views/Maintenance/Index.cshtml
+++ b/Riskvalve/Views/Maintenance/Index.cshtml
@@ -11,6 +11,12 @@
 
     var IsValveRepairedModel = new IsValveRepairedModel();
     var isValveRepairedStates = IsValveRepairedModel.GetIsValveRepairedList();
+    var baseurl = Url.Action("","");
+    var urlupdatemainenance = Url.Action("UpdateMaintenance", "Maintenance");
+    var urladdmainenance = Url.Action("AddMaintenance", "Maintenance");
+    var urldeletemainenance = Url.Action("DeleteMaintenance", "Maintenance");
+    var urlgetassetdetail = Url.Action("GetAssetDetail", "AssetRegister");
+    var urlgetmaintenancedetail = Url.Action("GetMaintenanceDetail", "Maintenance");
 }
 
 <div class="container-fluid">
@@ -18,7 +24,7 @@
         <div class="sidebar border border-right col-md-3 col-lg-2 p-0 bg-body-tertiary">
             <partial name="InspectionAssessmentSidebar" />
         </div>
-        <main class="col-md-9 ms-sm-auto col-lg-10 p-0 subheader-negative-margin with-bg-image">
+        <main class="col-md-9 ms-sm-auto col-lg-10 p-0 subheader-negative-margin with-bg-image" style="background-image:url('@baseurl/lib/images/u45.png')">
             <div>
                 <ul class="nav nav-tabs nav-tab-menus" id="inspectiontabheader" role="tablist">
                     <li class="nav-item">
@@ -230,7 +236,7 @@
                 if (form.hasClass('history-form')) {
                     // update
                     $.ajax({
-                        url: '/Maintenance/UpdateMaintenance',
+                        url: '@urlupdatemainenance',
                         type: 'POST',
                         data: formData,
                         contentType: false,
@@ -247,7 +253,7 @@
                 } else {
                     // add new
                     $.ajax({
-                        url: '/Maintenance/AddMaintenance',
+                        url: '@urladdmainenance',
                         type: 'POST',
                         data: formData,
                         contentType: false,
@@ -306,7 +312,7 @@
 
             if (confirm('Are you sure you want to delete this data?')) {
                 $.ajax({
-                    url: '/Maintenance/DeleteMaintenance',
+                    url: '@urldeletemainenance',
                     type: 'POST', // or 'GET' depending on your form method
                     data: {
                         Id: id
@@ -326,7 +332,7 @@
 
         function fetchAssetData({ id, counter }) {
             $.ajax({
-                url: '/AssetRegister/GetAssetDetail',
+                url: '@urlgetassetdetail',
                 type: 'GET',
                 data: { id },
                 success: function (data) {
@@ -343,7 +349,7 @@
 
         function fetchHistoryData({ id, counter }) {
             $.ajax({
-                url: '/Maintenance/GetMaintenanceDetail',
+                url: '@urlgetmaintenancedetail',
                 type: 'GET',
                 data: { id },
                 success: function (data) {
