--- a/Riskvalve/Views/Shared/_Layout.cshtml
+++ b/Riskvalve/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     string IsAdmin = ViewData["IsAdmin"] as string;
     string IsEngineer = ViewData["IsEngineer"] as string;
     string IsViewer = ViewData["IsViewer"] as string;
+    string urllogout = Url.Action( "Logout", "Login");
 }
 
 <!DOCTYPE html>
@@ -18,7 +19,6 @@
     <link href="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.0.3/b-3.0.1/b-html5-3.0.1/datatables.min.css"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
-
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/global.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true" />
@@ -111,11 +111,11 @@
                         </a>
                     </li>
                 }
-                <li class="nav-item text-nowrap">
+                @* <li class="nav-item text-nowrap">
                     <a class="nav-link px-3 text-white" href="#">
                         Help
                     </a>
-                </li>
+                </li> *@
             </ul>
             <ul class="navbar-nav flex-row mx-3">
                 <li class="nav-item text-nowrap">
@@ -179,7 +179,8 @@ else
     $(document).ready(function () {
         $("#btn-signout, #btn-signout-icon").click(function () {
             if (confirm('Are you sure you want to sign out?')) {
-                window.location.href = "/Login/Logout";
+                var path = "@urllogout";
+                location.href = path;
             }
         });
     });
