--- a/Riskvalve/Views/Tool/ImportAssetRegister.cshtml
+++ b/Riskvalve/Views/Tool/ImportAssetRegister.cshtml
@@ -1,5 +1,6 @@
 @{
     ViewData["Title"] = "Import Asset Register";
+    var urlimportexcel = Url.Action("ImportExcelFile", "Tool");
 }
 
 <div class="container-fluid">
@@ -56,7 +57,7 @@
                 formData.append("file", $("#fileUpload")[0].files[0]);
                 formData.append("mode", $("#mode").val());
                 $.ajax({
-                    url: "/Tool/ImportExcelFile",
+                    url: '@urlimportexcel',
                     type: "POST",
                     data: formData,
                     contentType: false,
